--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,9 @@ html {
     color: var(--secondary-color);
 }
 
-
+.buttoncontainer{
+    display: none;
+}
 #intro {
     display: flex;
     flex-direction: column;
@@ -128,13 +130,19 @@ html {
     color: red;
     text-decoration: none
 }
-body {
+
+.bodyCotainer{
     margin: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     background-color: #f2f2f2;
     overflow-x: hidden; /* This will hide the horizontal scrollbar */
+
+}
+body {
+    margin: 0;
+    padding:0;
   }
   
   #part1 {
@@ -201,7 +209,10 @@ body {
   
 #feat1,
 #feat2,
-#feat3 {
+#feat3,
+#feat4,
+#feat5,
+#feat6 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -211,7 +222,10 @@ body {
 
 #feat1 img,
 #feat3 img,
-#feat2 img {
+#feat2 img,
+#feat4 img,
+#feat5 img,
+#feat6 img   {
     
     max-width: 100%;
     margin-right: 20px; /* Add margin to separate image and text for feat1 and feat3 */
@@ -229,13 +243,19 @@ body {
 
 #feat1 h3,
 #feat2 h3,
-#feat3 h3 {
+#feat3 h3,
+#feat4 h3,
+#feat5 h3,
+#feat6 h3{
     color: white;
 }
 
 #feat1 h4,
 #feat2 h4,
-#feat3 h4 {
+#feat3 h4,
+#feat4 h4,
+#feat5 h4,
+#feat6 h4 {
     color: white;
     font-weight: 200;
     max-width: 500px; /* Adjust the max-width as needed for better text readability */
@@ -345,14 +365,24 @@ body {
 }
 .menu1{
     display: none;
-    gap:20px;
+  
+    position: fixed;
     align-items: end;
     margin-right: 40px;
+        align-items: center;
+    margin-right: 3rem;
+    z-index: 1;
+    height: 100%;
+    background-color: white;
+    width: 100%;
+    padding-top: 2rem;
+    padding-right: 3rem;
 }
     .menu1 a {
         text-decoration: none;
         color: var(--primary-color);
         font-weight: bold;
+        font-size: 24px;
         
     }
     #part1{
@@ -364,5 +394,60 @@ body {
     #intro h4{
         line-height: 24px;
     }
+    .aDiv{
+        border-bottom: 2px solid #ed786175;
+        width: 60%;
+        display: flex;
+        justify-content: center;
+       
+    }
 
+    .aDiv a, .twoDiv{
+        display: flex;
+    justify-content: center;
+    /* padding-bottom: 15px; */
+    height: 50px;
+    align-items: center;
+    }
+   .buttoncontainer{
+    position: relative;
+  display: flex;
+  top: -500px;
+  bottom: 0;
+ 
+  height: 4rem;
+color:red;
+  border: none;
+  width: 100%;
+  justify-content: space-between;
+  font-size: 3rem;
+  padding: 0;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: opacity 100ms;
+   }
+   .button{
+    
+   }
+   #button2{
+display: flex;
+border-radius: 2rem 0 0 2rem;
+background-color: gray;
+
+   }
+   #button1{
+    background-color: gray;
+    border-radius:  0 2rem 2rem 0;
+   }
+   #button1:hover, #button2:hover{
+    background-color: white;
+   }
+    #feat1{
+        display: flex;
+        flex-direction: column;
+    }
+    #feat2, #feat3{
+        display: none;
+    }
+  
 }
