--- a/styles.css
+++ b/styles.css
@@ -49,8 +49,23 @@ html {
     font-weight: bold;
     margin-right: 4rem;
 }
+.hoverEffect{
+    transition: transform 0.3s ease-in-out;
+   
+    -webkit-transition: -webkit-transform 0.3s ease-in-out;
+    -moz-transition: -moz-transform 0.3s ease-in-out;
+    -ms-transition: -ms-transform 0.3s ease-in-out;
+    -o-transition: -o-transform 0.3s ease-in-out;
+}
 
-
+.hoverEffect:hover {
+    transform: scale(1.1); 
+  
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  }
 
 #part1 {
     display: flex;
@@ -96,7 +111,7 @@ html {
 }
 
 #proposal {
-    margin:auto;
+    
     display: flex;
     width: 314px;
     height: 56px;
@@ -460,6 +475,15 @@ width: 40px;
         width: 90%;
         margin: 0 !important;
         
+    }
+    #proposal{
+        margin:auto;
+    }
+    #part1 img{
+        margin: auto;
+    }
+    #logoID{
+        left: 0;
     }
   
 }
